[tool.poetry]
name = "dz-15"
version = "0.1.0"
description = ""
authors = ["legend23 <yu@vtechnology.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "^2.0.0rc9"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts="-l -v --durations=10"

